# fastrtc-jp

./: .gitignore  MANIFEST.in  README.md  README_en.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
fastrtc_jp/: app.py
fastrtc_jp/handler/: agent_driver.py  agent_handler.py  agent_task.py  dummy.py  emit.py  service.py  session.py  stream_handler.py  stt_driver.py  stt_handler.py  vad.py  voice.py
fastrtc_jp/speech_to_text/: mlx_whisper.py  sr_google.py  util.py  vosk.py
fastrtc_jp/text_to_speech/: gtts.py  opt.py  style_bert_vits2.py  util.py  voicevox.py  voicevox_charinfo.json
fastrtc_jp/utils/: hf_util.py  util.py
tests/: example_1.py  example_2.py  example_3.py  make_voicevox_data.sh  make_voicevox_json.py  test_gtts.py  test_mlx_whisper.py  test_process.py  test_sr_google.py  test_style_bert_vits2.py  test_voicevox.py  test_vosk.py  utils.py
