[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastrtc_jp"
version = "0.1.3"
description = "A module kit for Fast RTC in Japanese"
authors = [
    {name = "route250", email = "89811136+route250@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastrtc[vad]>=0.0.23",
    "librosa>=0.11.0",
    "python-dotenv"
]

[project.optional-dependencies]
vosk = [
    "vosk==0.3.44",
]
gtts = [
    "gTTS>=2.5.4",
    "av>=13.1.0"
]
sr = [
    "SpeechRecognition==3.10.0"
]
sbv2 = [
    "style-bert-vits2>=2.5.0",
    "pyopenjtalk>=0.4.1"
]
mlx = [
    "mlx-whisper>=0.4.2"
]
dev = [
    "pytest>=7.0.0",
    "sounddevice"
]

[tool.setuptools]
packages = ["fastrtc_jp", "fastrtc_jp.text_to_speech", "fastrtc_jp.speech_to_text", "fastrtc_jp.utils"]

[project.urls]
Homepage = "https://github.com/route250/fastrtc-jp"
